# mapache

./: CMakeLists.txt  LICENSE  install_dependencies.sh  meson.build
examples/: example-mapache-config-file.json  index.php
planification/: planification.md  requirements.md  resources.md
src/: main.cpp
src/core/: errors.h  errors.hpp  main.cpp
src/core/server/: server.cpp  server.hpp
src/utils/: config_file_parser.cpp  json_parser.h
tests/: read_config_test.cpp  server_test.cpp
